se agrega template login.html  + login-view.scss

--- a/styles/scss/atomos/_variables.scss
+++ b/styles/scss/atomos/_variables.scss
@@ -15,6 +15,7 @@
     --darkBlue: #000425;
     --darkblue2: #000D29;
     --red: #F22A40;
+    --red2: #fc3535;
 
     /* Font Weights*/
     --regular: 400;
