--- a/styles/templates/login.html
+++ b/styles/templates/login.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login view</title>
+    <link rel="stylesheet" href="../scss/atomos/main.css">
 </head>
 <body>
-    <div id="app">
-        <div class="accede">
-            <div class="accede-hero">
-                <section  class="loginhero l-container-full">
-                    <div  class="loginhero__bg"><img src="../source/img/png/hero_desktop.png"></div>
-                    <div class="loginhero__contain l-section">
-                        <div class="loginhero__nav"><img src="../source/img/svg/logo.svg"></div>
-                        <div class="loginhero__text">
-                            <h1 class="Title-2">¡Explota todo tu potencial<br>tecnológico!</h1>
-                            <p class="Title-4">Con nuestros programas<br>de especialización</p>
+    <div id="login-template">
+        <div class="login-view">
+            <div class="login-hero-section">
+                <section  class="loginhero container-full">
+                    <div  class="login-hero-bg"><img src="../source/img/png/hero_desktop.png"></div>
+                    <div class="login-hero-content section-type-1">
+                        <div class="login-header"><img src="../source/img/svg/logo.svg"></div>
+                        <div class="login-hero-text">
+                            <h1 class="titulo-1">¡Explota todo tu potencial<br>tecnológico!</h1>
+                            <p class="subtitulo">Con nuestros programas<br>de especialización</p>
                         </div>
-                        <div class="loginhero__foot">
-                            <div  class="respaldo l-section">
-                                <p  class="f-Small respaldo-Titulo">Con el respaldo de:</p>
-                                <div  class="respaldo-boximg">
+                        <div class="login-footer">
+                            <div  class="respaldo section-type-1">
+                                <p  class="title-respaldo">Con el respaldo de:</p>
+                                <div  class="respaldo-box-logos">
                                     <img src="../source/img/svg/intercorp.svg" alt="">
                                     <img src="../source/img/svg/idat.svg" alt="">
                                     <img src="../source/img/svg/zegel.svg" alt="">
@@ -30,21 +31,21 @@
                     </div>
                 </section>
             </div>
-            <div class="accede-log">
-                <section class="LoginForm">
-                    <div   class="LoginForm__Content">
-                        <div  class="LoginForm__Switch">
-                            <div class="Switch__Login is-active">
-                                <span class="Title-5">Iniciar Sesión</span>
-                                <div  class="Switch__Stick"></div>
+            <div class="login-log-form">
+                <section class="login-form">
+                    <div   class="login-form-content">
+                        <div  class="login-form-switch">
+                            <div class="switch-login is-active">
+                                <span class="titulo-form">Iniciar Sesión</span>
+                                <div  class="switch-stick"></div>
                             </div>
-                            <div  class="Switch__Register">
-                                <span class="Title-5">Registrarse</span>
-                                <div  class="Switch__Stick"></div>
+                            <div  class="switch-register">
+                                <span class="titulo-form">Registrarse</span>
+                                <div  class="switch-stick"></div>
                             </div>
                         </div>
-                        <div class="LoginIn">
-                            <div  class="LoginIn__Social">
+                        <div class="login-in">
+                            <div  class="login-in-social">
                                 <p class="Parrafo">Puedes registrarte con:</p>
                                 <div  class="IconBox">
                                     <div><img src="../source/img/svg/facebok-icon.svg"></div>
@@ -52,10 +53,11 @@
                                 </div>
                                 <p class="Parrafo">También puedes registrarte con tu correo</p>
                             </div>
-                            <form  class="LoginIn__Form"><input type="email" placeholder="Correo electrónico" required="required" class="Parrafo"><input
-                                    type="password" placeholder="Contraseña" required="required"
-                                    class="Parrafo"><!----><input type="submit" value="Ingresar"
-                                    class="Title-5"></form>
+                            <form  class="login-in-form">
+                                <input type="email" placeholder="Correo electrónico" required="required" class="Parrafo">
+                                <input type="password" placeholder="Contraseña" required="required"class="Parrafo">
+                                <input type="submit" value="Ingresar" class="titulo-form">
+                            </form>
                         </div>
                     </div>
                 </section>
