--- a/styles/scss/atomos/_base.scss
+++ b/styles/scss/atomos/_base.scss
@@ -23,3 +23,11 @@ h3{
     font-size: 20px;
     font-weight: var(--medium);
 }
+
+button:focus, input[type="submit"]:focus, input:focus{
+    outline: none;
+}
+
+button, input[type="submit"]{
+    cursor: pointer;
+}
