--- a/styles/scss/atomos/_base.scss
+++ b/styles/scss/atomos/_base.scss
@@ -7,6 +7,8 @@
 body{
     font-family: var(--fontFamily);
     font-size: 14px;
+    color: var(--bodyColor);
+    background-color: var(--bodyBgColor);
 }
 
 h1{
@@ -22,4 +24,24 @@ h2{
 h3{
     font-size: 20px;
     font-weight: var(--medium);
+}
+
+.container{
+    max-width: 1310px;
+    padding: 0 50px;
+}
+
+.content{
+    padding-top: var(--contentSpace, 100px);
+    padding-bottom: var(--contentSpace, 100px);
+}
+
+.main-section{
+    --bodyColor: var(--darkBlue);
+    --bodyBgColor: var(--white);
+}
+
+.alternate-section{
+    --bodyColor: var(--white);
+    --bodyBgColor: var(--blue);
 }
