--- a/vue/src/assets/scss/_base.scss
+++ b/vue/src/assets/scss/_base.scss
@@ -1,3 +1,7 @@
+:root{
+    --container: 1310px;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -27,7 +31,7 @@ h3{
 }
 
 .container{
-    max-width: 1310px;
+    max-width: var(--container);
     padding: 0 50px;
     margin: 0 auto;
 }
@@ -52,7 +56,11 @@ h3{
     --bodyBgColor: var(--blue);
 }
   
-
+ul{
+    li{
+        list-style: none;
+    }
+}
 
 
 /*Layout Login View*/
