--- a/vue/src/assets/scss/_header.scss
+++ b/vue/src/assets/scss/_header.scss
@@ -21,6 +21,70 @@
             .main-menu{
                 display: flex;
                 align-items: center;
+                .menu-item{
+                    display: flex;
+                    align-items: center;
+                    &:not(:last-child){
+                        margin-right: 37px;
+                    }
+                    &.menu-item-carrito{
+                        a{
+                            width: 21px;
+                            height: 21px;
+                            display: block;
+                            position: relative;
+                            &::before{
+                                content: "";
+                                width: 100%;
+                                height: 100%;
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                background-image: url('../img/png/Carrito@2x.png');
+                                background-size: cover;
+                            }
+                        }
+                    }
+                    &.menu-item-burger{
+                        .hamburger-toggle{
+                            width: 18px;
+                            height: 12px;
+                            padding: 0;
+                            position: relative;
+                            background: transparent;
+                            border: none;
+                            outline: none;
+                            border-radius: 0;
+                            cursor: pointer;
+                            display: var(--toggleButtonStatus);
+                            .burger-box{
+                                width: 100%;
+                                height: 2px;
+                                background: var(--white);
+                                transition: all ease 0.2s;
+                                border-radius: 3px;
+                                &::before,
+                                &::after{
+                                    content: '';
+                                    height: 2px;
+                                    width: 100%;
+                                    background: var(--white);
+                                    position: absolute;
+                                    transition: all ease 0.2s;
+                                    border-radius: 3px;
+                                }
+                                &::before{
+                                    top: 0;
+                                    left: 0;
+                                }
+                                &::after{
+                                    bottom: 0;
+                                    left: 0;
+                                }
+                            }
+                        }
+                    }
+                }
             }
         }
     }
