--- a/vue/src/assets/scss/_base.scss
+++ b/vue/src/assets/scss/_base.scss
@@ -17,17 +17,17 @@ body{
 
 h1{
     font-size: 54px;
-    font-weight: var(--bold);
+    font-weight: var(--headingWeight, var(--bold));
 }
 
 h2{
     font-size: 26px;
-    font-weight: var(--bold);
+    font-weight: var(--headingWeight, var(--bold));
 }
 
 h3{
     font-size: 20px;
-    font-weight: var(--medium);
+    font-weight: var(--headingWeight, var(--bold));
 }
 
 .container{
