--- a/vue/src/assets/scss/_header.scss
+++ b/vue/src/assets/scss/_header.scss
@@ -84,6 +84,18 @@
                             }
                         }
                     }
+                    &.menu-item-login,
+                    &.menu-item-register{
+                        a{
+                            color: var(--white);
+                            text-decoration: none;
+                            font-size: 16px;
+                            transition: color ease-in-out 0.2s;
+                            &:hover{
+                              color: #705ef5;
+                            }
+                        }
+                    }
                 }
             }
         }
