--- a/vue/src/assets/scss/home/_hero-section.scss
+++ b/vue/src/assets/scss/home/_hero-section.scss
@@ -2,4 +2,10 @@
     background-image: url('@/assets/img/png/hero_desktop.png');
     background-size: cover;
     background-position: center center;
+    .container{
+        .heading-wrapper,
+        .heading-wrapper{
+            max-width: 718px;
+        }
+    }
 }
