--- a/vue/src/assets/scss/home/_home.scss
+++ b/vue/src/assets/scss/home/_home.scss
@@ -1,2 +1,5 @@
 @import 'hero-section';
 @import 'courses-section';
+@import 'gradient-section';
+@import 'beneficios-grid';
+@import 'beneficios-section';
