--- a/vue/src/assets/scss/_header.scss
+++ b/vue/src/assets/scss/_header.scss
@@ -2,7 +2,7 @@
     --headerNav: 58px;
 }
 .header{
-    position: fixed;
+    position: absolute;
     transition: box-shadow ease-in-out 0.2s, background-color ease-in-out 0.2s;
     z-index: 12;
     width: 100%;
