--- a/vue/src/assets/scss/home/_hero-section.scss
+++ b/vue/src/assets/scss/home/_hero-section.scss
@@ -8,4 +8,62 @@
             max-width: 718px;
         }
     }
+    .content{
+        padding-top: 200px;
+        padding-bottom: 100px;
+        h1{
+            margin-bottom: 30px;
+        }
+        .floating-form{
+            position: fixed;
+            top: calc(var(--headerNav) + 30px);
+            right: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-image: url('@/assets/img/png/phone.png');
+            background-size: cover;
+            max-width: 370px;
+            z-index: 12;
+            @media only screen and (max-width: 1200px){
+                display: none;
+            }
+            .floating-form-inner{
+                padding: 80px 75px 50px;
+                form{
+                    display: flex;
+                    flex-direction: column;
+                    .heading-wrapper{
+                        color: var(--darkBlue);
+                        margin-bottom: 20px;
+                    }
+                    input[type=text]{
+                        border-radius: 5px;
+                        border: 1px solid #8b9099;
+                        padding: 15px 10px;
+                        font-size: 12px;
+                        font-weight: var(--medium);
+                        text-transform: uppercase;
+                        &:not(:last-child){
+                            margin-bottom: 15px;
+                        }
+                    }
+                    span{
+                        label{
+                            font-size: 12px;
+                            color: var(--darkBlue);
+                        }
+                    }
+                    button{
+                        background-color: var(--blue);
+                        color: var(--white);
+                        border: 0;
+                        border-radius: 5px;
+                        padding: 17px 20px;
+                        margin-top: 50px;
+                    }
+                }
+            }
+        }
+    }
 }
