--- a/vue/src/assets/scss/_base.scss
+++ b/vue/src/assets/scss/_base.scss
@@ -30,7 +30,7 @@ h3{
     font-weight: var(--headingWeight, var(--bold));
 }
 
-.container{
+.container:not(.container-alert){
     max-width: var(--container);
     padding: 0 50px;
     margin: 0 auto;
