Se hizo merge de la rama feature-vuejs

--- a/vue/src/assets/scss/_header.scss
+++ b/vue/src/assets/scss/_header.scss
@@ -2,7 +2,7 @@
     --headerNav: 58px;
 }
 .header{
-    position: fixed;
+    position: absolute;
     transition: box-shadow ease-in-out 0.2s, background-color ease-in-out 0.2s;
     z-index: 12;
     width: 100%;
@@ -14,9 +14,6 @@
         max-width: var(--container);
         margin: 0 auto;
         padding: 0 50px;
-        .header-logo{
-
-        }
         .header-menu{
             .main-menu{
                 display: flex;
@@ -81,6 +78,18 @@
                                     bottom: 0;
                                     left: 0;
                                 }
+                            }
+                        }
+                    }
+                    &.menu-item-login,
+                    &.menu-item-register{
+                        a{
+                            color: var(--white);
+                            text-decoration: none;
+                            font-size: 16px;
+                            transition: color ease-in-out 0.2s;
+                            &:hover{
+                              color: #705ef5;
                             }
                         }
                     }
