--- a/vue/src/assets/scss/_base.scss
+++ b/vue/src/assets/scss/_base.scss
@@ -16,24 +16,38 @@ body{
 }
 
 h1{
-    font-size: 54px;
-    font-weight: var(--bold);
+    font-size: 26px;
+    font-weight: var(--headingWeight, var(--bold));
+    @media only screen and (min-width: 768px){
+        font-size: 54px;
+    }
 }
 
 h2{
     font-size: 26px;
-    font-weight: var(--bold);
+    font-weight: var(--headingWeight, var(--bold));
 }
 
 h3{
-    font-size: 20px;
-    font-weight: var(--medium);
+    font-size: 16px;
+    font-weight: var(--headingWeight, var(--bold));
+    @media only screen and (min-width: 768px){
+        font-size: 20px;
+    }
+}
+
+h4{
+    font-size: 16px;
+    font-weight: var(--headingWeight, var(--medium));
 }
 
 .container{
     max-width: var(--container);
-    padding: 0 50px;
+    padding: 0 7.5vw;
     margin: 0 auto;
+    @media only screen and (min-width: 768px){
+        padding: 0 50px;
+    }
 }
 
 .content{
