Se arreglo un error en el header carrito

--- a/vue/src/assets/scss/carrito/main.css
+++ b/vue/src/assets/scss/carrito/main.css
@@ -289,11 +289,12 @@ input,a {
     position: sticky;
     top: 0;
     width: 100%;
+    justify-content: start;
 }
 
 .header-carrito .--icon {
     grid-area: icon_;
-    margin-inline-start: 2em;
+    margin-inline: 2em;
 }
 
 .header-carrito .texto-form {
