actualizacion colores login-view

--- a/vue/src/assets/scss/_variables.scss
+++ b/vue/src/assets/scss/_variables.scss
@@ -16,6 +16,7 @@
     --darkblue2: #000D29;
     --red: #F22A40;
     --red2: #fc3535;
+    --red3: #dc3545;
 
     /* Font Weights*/
     --regular: 400;
