se modifico header y nav

--- a/vue/src/assets/scss/_header.scss
+++ b/vue/src/assets/scss/_header.scss
@@ -19,7 +19,10 @@
         max-width: var(--container);
         margin: 0 auto;
         padding: 0 50px;
-
+        @media only screen and (max-width: 767px){
+            flex-direction: column;
+            padding: 10px 0.75vw;
+        }
         .header-menu {
             .main-menu {
                 display: flex;
