--- a/vue/src/assets/scss/_header.scss
+++ b/vue/src/assets/scss/_header.scss
@@ -101,7 +101,7 @@
                             text-decoration: none;
                             font-size: 16px;
                             transition: color ease-in-out 0.2s;
-
+                            cursor: pointer;
                             &:hover {
                                 color: #705ef5;
                             }
